--- a/tarefa 01/index.html
+++ b/tarefa 01/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tarefa01</title>
     <style>
-        body {background-image: linear-gradient(to left,white,blue);}
+        body {
+            background-image: linear-gradient(to left, white, blue);
+        }
+
+        div {
+            text-align: center;
+        }
     </style>
 </head>
+
 <body>
-    
+    <div>
+        <h1>quem eu sou por exemplo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius inventore numquam placeat quaerat porro id
+            accusamus cumque, amet, quidem distinctio iste necessitatibus ipsam minima, rem dolores! Tenetur quod porro
+            excepturi.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis velit dignissimos maxime quos, aperiam
+            excepturi repudiandae accusantium dolores? Magni facilis iusto assumenda natus a, itaque aperiam
+            voluptatibus aut! Animi, exercitationem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem corporis iure quasi voluptatum, omnis
+            doloremque voluptate neque? Laudantium aspernatur iusto adipisci, pariatur id esse molestiae quis eveniet,
+            harum a sequi?</p>
+
+
+    </div>
+    <div>
+        <h1>como foi o dia</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quos neque dolor voluptatibus. Ipsa nulla
+            facere iusto odit tempore deleniti corporis quidem fugit? Eius blanditiis aspernatur nesciunt possimus
+            aliquam fugit?</p>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi repellendus quibusdam cumque numquam veritatis
+        recusandae incidunt obcaecati tempore inventore error illo at pariatur, similique nihil temporibus et optio iure
+        fuga.</p>
 </body>
+
 </html>
