--- a/desafio03/index.html
+++ b/desafio03/index.html
@@ -7,7 +7,7 @@
     <title>atividade 03</title>
     <style>
         body {
-            background-image: to left, blue, black;
+            background-image: linear-gradient(to left, blue, black)
         }
 
         h1 {
@@ -16,13 +16,31 @@
 
         h2 {
             color: red;
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+            color: white;
         }
     </style>
 </head>
 
 <body>
-    <h1>atividade 03</h1>
-    <h2>subtitulo</h2>
+    <h1>Objetivo 1</h1>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque reprehenderit asperiores qui id magni, optio ea
+            tenetur fugit laudantium suscipit alias, pariatur odit. Dolorem culpa accusantium dolore, ab nemo in?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque reprehenderit asperiores qui id magni, optio ea
+            tenetur fugit laudantium suscipit alias, pariatur odit. Dolorem culpa accusantium dolore, ab nemo in?</p>
+    </div>
+    <h1>Objetivo 2</h1>
+    
+    <h2>Testar</h2>
+    <div>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque reprehenderit asperiores qui id magni, optio ea
+        tenetur fugit laudantium suscipit alias, pariatur odit. Dolorem culpa accusantium dolore, ab nemo in?</P>
+    </div>
 </body>
 
 </html>
