--- a/desafio05/projetos.html
+++ b/desafio05/projetos.html
@@ -6,6 +6,15 @@
     <title>Meu primeiro site</title>
 </head>
 <body>
-    
+    <header>
+        <h1>
+            <a href="#">Alexandre Costa</a>
+        </h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="bio.html">Biografia</a>
+            <a href="#">Projetos</a>
+        </nav>
+    </header>
 </body>
 </html>
