--- a/desafio05/index.html
+++ b/desafio05/index.html
@@ -5,9 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
+    <style>
+        body {
+            background-image: url(imagem\ do\ meu\ site.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
+
     <header>
         <h1>
             <a href="#">Alexandre Costa</a>
