--- a/desafio05/projetos.html
+++ b/desafio05/projetos.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
+    <style>
+        a {
+            color: white;
+            text-decoration: none;
+        }
+
+        body {
+            background-image: url(imagem\ do\ meu\ site.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
+
 <body>
     <header>
         <h1>
@@ -17,4 +31,5 @@
         </nav>
     </header>
 </body>
+
 </html>
