--- a/desafio05/index.html
+++ b/desafio05/index.html
@@ -16,6 +16,18 @@
             color: white;
             text-decoration: none;
         }
+
+        #p1 {
+            color: white;
+        }
+        footer {
+            background-color: black;
+            color: white;
+            text-align: center;
+            padding: 1px;
+            margin: 0px;
+            border-radius: 20px;
+        }
     </style>
 </head>
 
@@ -32,5 +44,8 @@
         </nav>
     </header>
 </body>
+<footer>
+    <P id="p1"><a href="bio.html">saiba mais sobre mim</a></P>
+</footer>
 
 </html>
