--- a/desafio05/projetos.html
+++ b/desafio05/projetos.html
@@ -16,6 +16,10 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
+        #p1 {
+            color: white;
+        }
     </style>
 </head>
 
@@ -30,6 +34,11 @@
             <a href="#">Projetos</a>
         </nav>
     </header>
+    <footer>
+        <P id="p1"><a href="https://github.com/dev-alexandre2024">visite meu github</a></P>
+    </footer>
 </body>
+
+
 
 </html>
