--- a/tarefa07/index.html
+++ b/tarefa07/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TAREFA07</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="pilha-de-livros.png"image/x-icon">
 </head>
 
 <body>
