--- a/tarefa07/index.html
+++ b/tarefa07/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
         <div></div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#contatos">Contatos</a></li>
 
@@ -53,7 +53,6 @@
                     </p>
                 </div>
             </div>
-            </div>
 
             <div class="card">
                 <h2 class="card-titulo"> Otimização de Desempenho</h2>
@@ -65,6 +64,7 @@
                     </p>
                 </div>
             </div>
+
             <div class="card">
                 <h2 class="card-titulo">Integração com APIs</h2>
                 <div class="conteudo">
@@ -77,6 +77,7 @@
                     </p>
                 </div>
             </div>
+
             <div class="card">
                 <h2 class="card-titulo"> Desenvolvimento de Componentes Reutilizáveis</h2>
                 <div class="conteudo">
@@ -88,7 +89,7 @@
                     </p>
                 </div>
             </div>
-            </div>
+
             <div class="card">
                 <h2 class="card-titulo">Acessibilidade Web </h2>
                 <div class="conteudo">
@@ -99,19 +100,15 @@
                     </p>
                 </div>
             </div>
-
-
-
         </section>
-
     </main>
-    <div>
-        <footer>Atendimento ao cliente
 
-            <P>telefone (55)0186-9165</P>
-            <p>instagram : @alexandre-dev</p>
-        </footer>
-    </div>
+    <footer>
+        <p>Atendimento ao cliente</p>
+
+        <P>telefone (55)0186-9165</P>
+        <p>instagram : @alexandre-dev</p>
+    </footer>
 </body>
 
 </html>
