--- a/tarefa07/index.html
+++ b/tarefa07/index.html
@@ -105,9 +105,8 @@
 
     <footer>
         <p>Atendimento ao cliente</p>
-
-        <P>telefone (55)0186-9165</P>
-        <p>instagram : @alexandre-dev</p>
+        <P>Telefone (55)0186-9165</P>
+        <p>Instagram : @alexandre-dev</p>
     </footer>
 </body>
 
