--- a/tarefa07/index.html
+++ b/tarefa07/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <header>
-        <div></div>
+        <div class="logo">
+            <img class="logomarca" src="img/favicon.png" alt="">
+        </div>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
