--- a/tarefa07/index.html
+++ b/tarefa07/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <div class="card">h</div>
+        <div class="card"></div>
 
         <section id="home">
             <img src="background07.png" alt="">
