--- a/tarefa07/index.html
+++ b/tarefa07/index.html
@@ -27,11 +27,11 @@
         <div class="card"></div>
 
         <section id="home">
-            <img src="background07.png" alt="">
+            <img src="img/HOME.png" alt="">
 
         </section>
         <section id="servicos">
-            <img src="background07 2.png" alt="">
+            <img src="img/servicos.png" alt="">
 
             <div class="card">
                 <h2 class="card-titulo">Desenvolvimento de Interfaces Responsivas</h2>
