--- a/atividade08/index.html
+++ b/atividade08/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="teste"><h2>Teste de CSS - hover</h2></div>
+    <div class="teste">Teste de CSS - hover</div>
 </body>
 </html>
