--- a/tarefa09/index.html
+++ b/tarefa09/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefa 09</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="content">
